# DevMark

./: .gitignore  NOTES.md  README.md  pyproject.toml
devmark/: __init__.py
