[project]
name = "devmark"
version = "0.1.0"
description = "A bookmark for your development work - save state, restore context"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "click>=8.1.0",
    "rich>=13.0.0",
    "ollama>=0.1.0",
]

[project.scripts]
devmark = "devmark.cli:main"
dm = "devmark.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["devmark"]
